Commit for version 0.6